--- a/command/master/score/sequence2.yml
+++ b/command/master/score/sequence2.yml
@@ -7,18 +7,18 @@ loops: infinite
 elements:
   -
     begin: 0
-    element:
+    elements:
       type: speak
       text: Hello, world!
   -
     begin: 1.5
-    element:
+    elements:
       type: speak
       text: Hello, Tom!
 
   -
     begin: 3.0
-    element:
+    elements:
       type: speak
       text: Hello, it worked!
 
